[tool.poetry]
name = "llm-mastery"
version = "0.1.0"
description = ""
authors = ["Hari-Krishna-QmFuZGk <harikrishna6863@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipdb = "^0.13.13"
tqdm = "^4.67.1"
sentencepiece = "^0.2.0"
jupyter = "^1.1.1"
wandb = "^0.19.0"
black = "^24.10.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
